<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- -->
        <!-- A LinearLayout for the ImageView on the left, and a Button and 3 TextViews on the right -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/details_wine_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:paddingTop="4dp"
                android:scaleType="fitCenter"
                android:src="@drawable/empty_wine2"
                android:contentDescription="@string/details_main_image_description"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <Button
                    android:id="@+id/details_button_change_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:text="@string/details_button_change_photo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_text_view_cost" />

                    <EditText
                        android:id="@+id/details_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/details_edittext_cost"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/details_price" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_text_view_price" />

                    <EditText
                        android:id="@+id/details_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/details_edittext_price"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/details_winery" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                    <ImageView
                        android:id="@+id/details_button_decrease_quantity"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/decrement"
                        android:contentDescription="@string/details_minus"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/details_text_view_quantity" />

                    <TextView
                        android:id="@+id/details_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/details_edittext_quantity" />

                    <ImageView
                        android:id="@+id/details_button_increase_quantity"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/increment"
                        android:contentDescription="@string/details_plus"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- A LinearLayout for "WINERY" EditText on the left, and "NAME" EditText on the right -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/details_winery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/details_edittext_winery"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/details_wine_name" />

            <EditText
                android:id="@+id/details_wine_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/details_edittext_wine_name"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/details_wine_category" />

        </LinearLayout>

        <!-- A LinearLayout for "Catagory" Spinner-left, and "Varietal" Spinner-right -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/details_wine_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusDown="@+id/details_varietal"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:id="@+id/details_varietal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusDown="@+id/details_origin_country"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/details_red_varietal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/details_white_varietal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/details_dessert_varietal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/details_fortified_varietal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

        </LinearLayout>

        <!-- A LinearLayout for "COUNTRY" Spinner- left, an optional "STATE" Spinner- near right
         and "YEAR" EditText-far right -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/details_origin_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:nextFocusDown="@+id/details_origin_state"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/details_origin_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusDown="@+id/details_year"
                android:spinnerMode="dropdown"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/details_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/details_edittext_year"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusDown="@+id/details_bottle_size" />

        </LinearLayout>

        <!-- A LinearLayout for a "SIZE" Spinner -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/details_bottle_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusDown="@+id/details_distributor"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <!-- A LinearLayout for "DISTRIB" EditText-left, and "PHONE#" EditText-right -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/details_distributor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/details_edittext_distributor"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/details_distributor_phone" />

            <EditText
                android:id="@+id/details_distributor_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/details_edittext_distributor_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:nextFocusDown="@+id/details_description" />

        </LinearLayout>

        <!-- A "DESCRIPTION" EditText view -->
        <EditText
            android:id="@+id/details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:hint="@string/details_edittext_description"
            android:inputType="text" />

    </LinearLayout>

</ScrollView>