<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_item_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/list_item_img_description"
        android:paddingTop="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/empty_wine2" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">


        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/list_item_winery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:paddingTop="4dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/list_item_varietal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/list_item_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="6dp"
                android:paddingStart="6dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/list_item_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_price_label" />

            <TextView
                android:id="@+id/list_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/list_item_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_quantity_label" />

            <TextView
                android:id="@+id/list_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="6dp"
                android:paddingStart="6dp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/list_item_button_sell_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:src="@drawable/minus_one"
        android:contentDescription="@string/list_item_minus_one"/>

</LinearLayout>